sumo/tests/sumo/errors/duplicates/net_edge/errors.sumo
Error: Another edge with the id '1to2' exists.
Quitting (on error).
